# llamie

./: LICENSE  README.md  pyproject.toml
distilling/: get_pixtral.py
frontend/: Dockerfile  bun.lockb  package.json  svelte.config.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/llama/: +page.svelte
frontend/src/routes/whisper/: +page.svelte
llami/backend/: jetson_server.py  robot_server.py
llami/backend/models/: README.md
llami/configs/: policy_extraction_prompt.py
llami/configs/robot/: moss.yaml
llami/configs/trained_policies/: grab_banana.yaml  grab_cup.yaml  grab_pen.yaml  grab_pills.yaml
llami/robot/: dummy_arm.py  robot_router.py
