[tool.poetry]
name = "llami"
version = "0.1.0"
description = "cheap fully local robotics for assisted living"
authors = ["Francesco Capuano <francesco_capuano@aol.com>", "Eyal Benaroche <eyal.benaroche@polytechnique.edu>", "Thomas Loux <thomas.loux@polytechnique.edu>", "Giuseppe Suriano <gisuriano@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
httpx = "^0.27"
langchain = "^0.3"
langchain_core = "^0.3"
langchain_groq = "^0.2"
lerobot = "^0.1"
numpy = "^2.1"
pydantic = "^2.10"
python-dotenv = "^1.0"
PyYAML = "^6.0"
tqdm = "^4.67"
uvicorn = "^0.32"
websockets = "^14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
